--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
     <!-- link to custom stylesheet (always require after Bootstrap) -->
-    <link rel="stylesheet" href="/css/style.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="css/style.css" media="screen" title="no title" charset="utf-8">
     <!-- jQuery from CDN -->
-
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 
     <!-- link to custom javascript file (always require after external JS libraries) -->
-
+    <script src="js/app.js"></script>
     <title>Tic Tac Toe</title>
   </head>
   <body>
@@ -35,9 +35,19 @@
           <!-- you can put rows inside of columns! -->
           <!-- Bootstrap subdivides these 'nested' rows into 12 columns, too! -->
           <div class="row">
-            <div class="col-md-4 box">a</div>
-            <div class="col-md-4 box">a</div>
-            <div class="col-md-4 box">a</div>
+            <div class="col-md-4 box text-center">a</div>
+            <div class="col-md-4 box text-center">a</div>
+            <div class="col-md-4 box text-center">a</div>
+          </div>
+          <div class="row">
+            <div class="col-md-4 box text-center">a</div>
+            <div class="col-md-4 box text-center">a</div>
+            <div class="col-md-4 box text-center">a</div>
+          </div>
+          <div class="row">
+            <div class="col-md-4 box text-center">a</div>
+            <div class="col-md-4 box text-center">a</div>
+            <div class="col-md-4 box text-center">a</div>
           </div>
 
 
