--- a/index.html
+++ b/index.html
@@ -26,33 +26,11 @@
           <hr>
         </div>
       </div>
-      <div class="row">
+      <div class="row" id="game">
 
         <!-- a column represents our game board -->
         <!-- the `offset` class helps us center the board -->
-        <div class="col-md-6 col-md-offset-3" id="board">
-
-          <!-- you can put rows inside of columns! -->
-          <!-- Bootstrap subdivides these 'nested' rows into 12 columns, too! -->
-          <div class="row">
-            <div class="col-md-4 box text-center">a</div>
-            <div class="col-md-4 box text-center">a</div>
-            <div class="col-md-4 box text-center">a</div>
-          </div>
-          <div class="row">
-            <div class="col-md-4 box text-center">a</div>
-            <div class="col-md-4 box text-center">a</div>
-            <div class="col-md-4 box text-center">a</div>
-          </div>
-          <div class="row">
-            <div class="col-md-4 box text-center">a</div>
-            <div class="col-md-4 box text-center">a</div>
-            <div class="col-md-4 box text-center">a</div>
-          </div>
-
-
-
-        </div>
+        
       </div>
     </div>
   </body>
