Added user input to create the board size

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
     <!-- link to custom stylesheet (always require after Bootstrap) -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/141dce00c5.css">
     <link rel="stylesheet" href="css/style.css" media="screen" title="no title" charset="utf-8">
     <!-- jQuery from CDN -->
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
@@ -26,6 +27,12 @@
           <hr>
         </div>
       </div>
+      <form id="input-form">
+        <div class="form-group">
+          <label class="form-control-label" for="table-input">Input Game Size Here</label>
+          <input type="text" class="form-control" id="game-sise-input" placeholder="3">
+        </div>
+      </form>
       <div class="row" id="game">
 
         <!-- a column represents our game board -->
