Added fixed for random sorting

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <form id="input-form">
         <div class="form-group">
           <label class="form-control-label" for="table-input">Input Game Size Here</label>
-          <input type="text" class="form-control" id="game-sise-input" placeholder="3">
+          <input type="text" class="form-control" id="game-sise-input" placeholder="3" value="3">
         </div>
       </form>
       <div class="row" id="game">
@@ -39,6 +39,7 @@
         <!-- the `offset` class helps us center the board -->
         
       </div>
+
     </div>
   </body>
 </html>
