Added modal for wrong move, stalemate, computer and player win

--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
     <title>Tic Tac Toe</title>
   </head>
   <body>
+    <div id="modal">
+      <div class="container">
+        <p></p>
+        <button type="button" class="btn btn-default">OK</button>
+      </div>
+    </div>
     <div class="container">
       <div class="row text-center">
         <div class="col-md-12">
@@ -30,7 +36,7 @@
       <form id="input-form">
         <div class="form-group">
           <label class="form-control-label" for="table-input">Input Game Size Here</label>
-          <input type="text" class="form-control" id="game-sise-input" placeholder="3" value="3">
+          <input type="text" class="form-control" id="game-sise-input" placeholder="3" autofocus value="3">
         </div>
       </form>
       <div class="row" id="game">
